<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.nglauber.aula04_filmes.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include layout="@layout/layout_empty_list"/>
</RelativeLayout>