<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.nglauber.aula04_filmes.FavoriteMoviesFragment">

    <android.support.v7.widget.ListViewCompat
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="16dp"
        android:padding="8dp" />

    <include layout="@layout/layout_empty_list" />
</FrameLayout>
